--- a/views/setting.ejs
+++ b/views/setting.ejs
@@ -17,7 +17,18 @@
     </div>
 
     <div data-role="content">
-        设置
+        <ul data-role="listview" data-inset="true">
+            <li><a href="#">个人信息</a></li>
+            <li><a href="#">推送设置</a></li>
+        </ul>
+
+        <ul data-role="listview" data-inset="true">
+            <li><a href="#">去给我们打个分，评价一把</a></li>
+            <li><a href="#">帮助和反馈</a></li>
+            <li><a href="#">作者信息</a></li>
+        </ul>
+
+        <a href="#" data-role="button" data-theme="e">退出登录</a>
     </div>
     <style>
         .nav-glyphish .ui-btn .ui-btn-inner { padding-top: 40px !important; }
