--- a/views/msg.ejs
+++ b/views/msg.ejs
@@ -51,7 +51,7 @@
         </ul>
     </div>
     <style>
-        .nav-glyphish .ui-btn .ui-btn-inner { padding-top: 40px !important; }
+        .nav-glyphish .ui-btn .ui-btn-inner { padding-top: 30px !important; padding-bottom: 0 !important}
         .nav-glyphish .ui-btn .ui-icon { width: 30px!important; height: 30px!important; margin-left: -15px !important; box-shadow: none!important; -moz-box-shadow: none!important; -webkit-box-shadow: none!important; -webkit-border-radius: 0 !important; border-radius: 0 !important; }
         #msg .ui-icon { background:  url(res/icons/icons-white/09-chat-2@2x.png) 50% 50% no-repeat; background-size: 24px 22px; }
         #fav .ui-icon { background:  url(res/icons/icons-white/253-person@2x.png) 50% 50% no-repeat; background-size: 26px 24px;  }
