--- a/public/stylesheets/msg.css
+++ b/public/stylesheets/msg.css
@@ -7,9 +7,9 @@ ul {
 }
 
 .top {
-    background: url(/images/bg.jpg) no-repeat 0 -190px transparent;
+    background: url(/images/bg.jpg) no-repeat 0 -290px transparent;
     margin: -15px;
-    min-height: 220px;
+    min-height: 110px;
 }
 
 .info {
@@ -20,8 +20,10 @@ ul {
 
 .info .user {
     position: absolute;
-    left: 20px;
-    top: -60px;
+    left: 10px;
+    top: -30px;
+    width: 75px;
+    height: 75px;
 }
 
 .info .unread, .info .fav {
@@ -29,7 +31,7 @@ ul {
     text-align: center;
     color: #666;
     font-weight: bold;
-    padding: 30px 0;
+    padding: 15px 0;
 }
 
 .info .unread span, .info .fav span {
@@ -37,13 +39,13 @@ ul {
 }
 
 .info .unread span {
-    margin-right: 28px;
+    margin-right: 14px;
 }
 
 .info .unread {
-    width: 45%;
+    width: 44%;
     text-align: right;
-    padding-right: 20px;
+    padding-right: 10px;
 }
 
 .info .fav {
