--- a/public/stylesheets/msg.css
+++ b/public/stylesheets/msg.css
@@ -16,11 +16,12 @@ ul {
     margin: -15px;
     background-color: #f6f6f6;
     position: relative;
+    font-size: 12px;
 }
 
 .info .user {
     position: absolute;
-    left: 10px;
+    left: 5px;
     top: -30px;
     width: 75px;
     height: 75px;
@@ -45,7 +46,7 @@ ul {
 .info .unread {
     width: 44%;
     text-align: right;
-    padding-right: 10px;
+    padding-right: 5px;
 }
 
 .info .fav {
@@ -55,6 +56,7 @@ ul {
 
 .msg {
     margin-top: 15px;
+    font-size: 12px;
 }
 
 .msg li {
@@ -69,12 +71,14 @@ img {
 }
 
 .msg img {
-    margin: 10px;
+    margin: 5px;
+    width: 50px;
+    height: 50px;
 }
 
 .msg .detail-wrap {
-    margin-left: 140px;
-    margin-top: -100px;
+    margin-left: 70px;
+    margin-top: -60px;
 }
 
 .msg .detail {
@@ -83,10 +87,11 @@ img {
 }
 
 .msg .detail img {
-    margin: 5px;
+    margin: 5px 0 0 5px;
 }
 
 .comment {
-    margin-left: 100px;
-    margin-top: -80px;
+    margin-left: 60px;
+    margin-top: -50px;
+    font-size: 12px;
 }
