--- a/views/first.ejs
+++ b/views/first.ejs
@@ -13,7 +13,10 @@
     <img src="/images/first.png" alt="" style="width: 320px;height: 480px;">
     <script type="text/javascript">
         setTimeout(function(){
-            $.mobile.changePage('/fav')
+            $.mobile.changePage('/fav', {
+                allowSamePageTransition: true,
+                transition:"flip"
+            })
         }, 2000);
     </script>
 </div>
