--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,27 +25,13 @@
 </div>
 </header>
         <section class="innercontent">
-            <form  method="post"   class="c-form login-form" action="https://login.m.taobao.com/login.htm?_input_charset=utf-8&amp;sid=fb6fe7fd9fe3e119" id="J_Login">
+            <form  method="post"   class="c-form login-form" action="https://oauth.tbsandbox.com/authorize?client_id=1021354870&response_type=code&redirect_uri=http://10.13.37.48:3000/msg" id="J_Login">
                 <input name='_tb_token_' type='hidden' value='Dx8z44jonl' />
                 <fieldset>
-                    <div class="field username">
-                      <div class="c-form-search">
-                        <input type="text" name="TPL_username" id="J_UserNameTxt"   placeholder="会员名" value="" />
-                        <button type="button"><span></span></button>
-                      </div>
-                    </div>
-                    <div class="field pwd">
-                        <input  type="password" name="TPL_password" id="J_PassWordTxt"  placeholder="密码"  class="c-form-txt-normal" />
-                    </div>
                     <div class="field submit-btn">
-                        <input type="submit" class="c-btn-oran-big" value="登 录"/>
+                        <input type="submit" class="c-btn-oran-big" value="淘 宝 登 录"/>
                     </div>
                 </fieldset>
-              <input type="hidden" name="action" value="IphoneLoginAction"/>
-              <input type="hidden" name="event_submit_do_login" value="1"/>
-              <input type="hidden" name="TPL_redirect_url" value="http://m.taobao.com/?"/>
-              <input type="hidden" name="sid" value="fb6fe7fd9fe3e119" />
-              <input type="hidden" name="_umid_token" value="T735d52d68ccd88609a4393c91db260cc1357627560957" />
             </form>
        </section>
 <noscript>
