--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,7 +25,7 @@
 </div>
 </header>
         <section class="innercontent">
-            <form  method="post"   class="c-form login-form" action="https://oauth.tbsandbox.com/authorize?client_id=21354870&response_type=code&redirect_uri=http://10.13.37.48:3000/auth" id="J_Login">
+            <form  method="post"   class="c-form login-form" action="https://oauth.taobao.com/authorize?spm=0.0.0.191.UUePJT&response_type=code&client_id=21354870&redirect_uri=http://10.13.37.48:3000/msg&state=1212&scope=item&view=web" id="J_Login">
                 <input name='_tb_token_' type='hidden' value='Dx8z44jonl' />
                 <fieldset>
                     <div class="field submit-btn">
