--- a/views/msg.ejs
+++ b/views/msg.ejs
@@ -9,7 +9,6 @@
     <script src="/lib/jquery.mobile-1.2.0.min.js"></script>
 </head>
 <body>
-
 <div data-role="page">
     <link rel="stylesheet" href="/stylesheets/msg.css" />
     <div data-role="content">
@@ -28,7 +27,7 @@
                 <img src="http://img02.taobaocdn.com/bao/uploaded/i2/24752318/T24oiwXX0bXXXXXXXX_!!24752318.jpg_100x100.jpg"/>
                 <div class="detail-wrap">
                     <h4>宝贝有新评论</h4>
-                    <div class="detail">
+                    <div class="detail clearfix">
                         <img src="http://wwc.taobaocdn.com/avatar/getAvatar.do?userId=72429252&width=60&height=60&type=sns" width="65" height="65">
                         <p class="comment">
                             <strong>Harry:</strong>宝贝非常好，很是保暖
@@ -40,7 +39,7 @@
                 <img src="http://img06.taobaocdn.com/bao/uploaded/i6/T1jdLZXlpdXXc68qPX_114239.jpg_100x100.jpg"/>
                 <div class="detail-wrap">
                     <h4>xx家店铺有更新</h4>
-                    <div class="detail">
+                    <div class="detail shopdetail clearfix">
                         <img src="http://img06.taobaocdn.com/bao/uploaded/i6/T1jdLZXlpdXXc68qPX_114239.jpg_100x100.jpg" />
                         <img src="http://img06.taobaocdn.com/bao/uploaded/i6/T1jdLZXlpdXXc68qPX_114239.jpg_100x100.jpg" />
                         <img src="http://img06.taobaocdn.com/bao/uploaded/i6/T1jdLZXlpdXXc68qPX_114239.jpg_100x100.jpg" />
@@ -51,7 +50,7 @@
         </ul>
     </div>
     <style>
-        .nav-glyphish .ui-btn .ui-btn-inner { padding-top: 30px !important; padding-bottom: 0 !important}
+        .nav-glyphish .ui-btn .ui-btn-inner { padding-top: 40px !important;}
         .nav-glyphish .ui-btn .ui-icon { width: 30px!important; height: 30px!important; margin-left: -15px !important; box-shadow: none!important; -moz-box-shadow: none!important; -webkit-box-shadow: none!important; -webkit-border-radius: 0 !important; border-radius: 0 !important; }
         #msg .ui-icon { background:  url(res/icons/icons-white/09-chat-2@2x.png) 50% 50% no-repeat; background-size: 24px 22px; }
         #fav .ui-icon { background:  url(res/icons/icons-white/253-person@2x.png) 50% 50% no-repeat; background-size: 26px 24px;  }
