--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,3 +5,110 @@ body {
 a {
   color: #00b7ff;
 }
+.clearfix:after{content:".";display:block;height:0;clear:both;visibility:hidden}
+
+.nav-glyphish .ui-btn .ui-btn-inner { padding-top: 40px !important;}
+.nav-glyphish .ui-btn .ui-icon { width: 30px!important; height: 30px!important; margin-left: -15px !important; box-shadow: none!important; -moz-box-shadow: none!important; -webkit-box-shadow: none!important; -webkit-border-radius: 0 !important; border-radius: 0 !important; }
+.msg .ui-icon { background:  url(/res/icons/icons-white/09-chat-2@2x.png) 50% 50% no-repeat; background-size: 24px 22px; }
+.fav .ui-icon { background:  url(/res/icons/icons-white/253-person@2x.png) 50% 50% no-repeat; background-size: 26px 24px;  }
+.list .ui-icon { background:  url(/res/icons/icons-white/259-list@2x.png) 50% 50% no-repeat;  background-size: 20px 24px; }
+.setting .ui-icon { background:  url(/res/icons/icons-white/19-gear@2x.png) 50% 50% no-repeat;  background-size: 26px 26px; }
+
+#msg ul {
+    list-style: none;
+    padding: 0;
+    margin: -15px;
+}
+
+#msg .top {
+    background: url(/images/bg.jpg) no-repeat 0 -290px transparent;
+    margin: -15px;
+    min-height: 110px;
+}
+
+#msg .info {
+    margin: -15px;
+    background-color: #f6f6f6;
+    position: relative;
+    font-size: 12px;
+}
+
+#msg .info .user {
+    position: absolute;
+    left: 5px;
+    top: -30px;
+    width: 75px;
+    height: 75px;
+}
+
+#msg .info .unread, #msg .info .fav {
+    display: inline-block;
+    text-align: center;
+    color: #666;
+    font-weight: bold;
+    padding: 15px 0;
+}
+
+#msg .info .unread span, #msg .info .fav span {
+    display: block;
+}
+
+#msg .info .unread span {
+    margin-right: 14px;
+}
+
+#msg .info .unread {
+    width: 44%;
+    text-align: right;
+    padding-right: 5px;
+}
+
+#msg .info .fav {
+    width: 25%;
+    border-left: solid 1px #d3d3d3;
+}
+
+#msg .msg {
+    margin-top: 15px;
+    font-size: 12px;
+}
+
+#msg .msg li {
+    border-top: 1px solid #dadada;
+    border-bottom: 1px solid #eee;
+    background-color: #e7e7e7;
+    padding: 10px;
+}
+
+#msg img {
+    border: solid 1px #eee;
+}
+
+#msg .msg img {
+    width: 50px;
+    height: 50px;
+}
+
+#msg .msg .detail-wrap {
+    margin-left: 70px;
+    margin-top: -60px;
+}
+
+#msg .msg .detail {
+    background-color: #fff;
+    min-height: 45px;
+    padding: 5px;
+}
+
+#msg .msg .detail img {
+    float: left;
+}
+
+#msg .msg .shopdetail img {
+    margin-right: 3px;
+}
+
+#msg .comment {
+    margin-left: 60px;
+    font-size: 12px;
+}
