--- a/views/first.ejs
+++ b/views/first.ejs
@@ -1,24 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>My Page</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="lib/jquery.mobile-1.2.0.min.css" />
-    <script src="lib/jquery-1.8.3.min.js"></script>
-    <script src="lib/jquery.mobile-1.2.0.min.js"></script>
-</head>
-<body>
-<div data-role="page">
+<div data-role="page" id="first">
     <img src="/images/first.png" alt="" style="width: 320px;height: 480px;">
-    <script type="text/javascript">
-        setTimeout(function(){
-            $.mobile.changePage('/fav', {
-                allowSamePageTransition: true,
-                transition:"flip"
-            })
-        }, 2000);
-    </script>
 </div>
-</body>
-</html>
