--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-		<p>Welcome to <%= title %></p>
-		<p><a href="/faverate">我的收藏</a></p>
-  </body>
+<head>
+    <title>推优</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="lib/jquery.mobile-1.2.0.min.css" />
+    <link rel="stylesheet" href="stylesheets/style.css">
+    <script src="lib/jquery-1.8.3.min.js"></script>
+    <script src="lib/jquery.mobile-1.2.0.min.js"></script>
+    <script type="text/javascript" src="lib/mustache.js"></script>
+    <script type="text/javascript" src="javascripts/all.js"></script>
+</head>
+<body>
+<% include first %>
+<% include msg %>
+<% include list %>
+<% include setting %>
+</body>
 </html>
