--- a/views/settings/mypush.ejs
+++ b/views/settings/mypush.ejs
@@ -4,9 +4,10 @@
     <title>My Page</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/lib/jquery.mobile-1.2.0.min.css" />
-    <script src="/lib/jquery-1.8.3.min.js"></script>
-    <script src="/lib/jquery.mobile-1.2.0.min.js"></script>
+    <link rel="stylesheet" href="lib/jquery.mobile-1.2.0.min.css" />
+    <script src="lib/jquery-1.8.3.min.js"></script>
+    <script src="lib/jquery.mobile-1.2.0.min.js"></script>
+    <script type="text/javascript" src="lib/mustache.js"></script>
 </head>
 <body>
 
