--- a/views/msg.ejs
+++ b/views/msg.ejs
@@ -10,7 +10,7 @@
             </ul>
             <img class="user" src="http://wwc.taobaocdn.com/avatar/getAvatar.do?userNick=%d5%c5%cd%a6&width=80&height=80&type=sns" width="150" height="150">
         </div>
-        <ul class="msg">
+        <ul class="msg-main">
             <li>
                 <img src="http://img02.taobaocdn.com/bao/uploaded/i2/24752318/T24oiwXX0bXXXXXXXX_!!24752318.jpg_100x100.jpg"/>
                 <div class="detail-wrap">
@@ -40,7 +40,7 @@
     <div data-role="footer" class="nav-glyphish" data-position="fixed" data-id="myfooter">
         <div data-role="navbar" class="nav-glyphish">
             <ul>
-                <li><a href="#" data-icon="custom" class="msg" class="ui-btn-active ui-state-persist">消息中心</a></li>
+                <li><a href="#" data-icon="custom" class="msg ui-btn-active ui-state-persist">消息中心</a></li>
                 <li><a href="#fav" data-icon="custom" class="fav">我的收藏</a></li>
                 <li><a href="#list" data-icon="custom" class="list">逛一逛</a></li>
                 <li><a href="#setting" data-icon="custom" class="setting">设置</a></li>
