--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,5 +1,4 @@
-<div data-role="page" id="mylist">
-    <link rel="stylesheet" type="text/css" href="/stylesheets/list.css" />
+<div data-role="page" id="list">
     <div data-role="header">
         <h1>逛一逛</h1>
     </div>
@@ -13,10 +12,10 @@
     <div data-role="footer" class="nav-glyphish" data-position="fixed" data-id="myfooter">
         <div data-role="navbar" class="nav-glyphish">
             <ul>
-                <li><a href="/msg" data-icon="custom" id="msg">消息中心</a></li>
-                <li><a href="/fav" data-icon="custom" id="fav">我的收藏</a></li>
-                <li><a href="#" data-icon="custom" id="list" class="ui-btn-active ui-state-persist">逛一逛</a></li>
-                <li><a href="/setting" data-icon="custom" id="setting">设置</a></li>
+                <li><a href="#msg" data-icon="custom" class="msg">消息中心</a></li>
+                <li><a href="#fav" data-icon="custom" class="fav">我的收藏</a></li>
+                <li><a href="#" data-icon="custom" class="list ui-btn-active ui-state-persist">逛一逛</a></li>
+                <li><a href="#setting" data-icon="custom" class="setting">设置</a></li>
             </ul>
         </div>
     </div>
