--- a/views/setting.ejs
+++ b/views/setting.ejs
@@ -1,4 +1,4 @@
-<div data-role="page">
+<div data-role="page" id="setting">
 
     <div data-role="header">
         <h1>我的设置</h1>
@@ -6,7 +6,7 @@
 
     <div data-role="content">
         <ul data-role="listview" data-inset="true">
-            <li><a href="/setting/mypush" data-transition="slide">我的推送 <span class="ui-li-count">0</span></a></li>
+            <li><a href="#mypush" data-transition="slide">我的推送 <span class="ui-li-count">0</span></a></li>
         </ul>
 
         <ul data-role="listview" data-inset="true">
@@ -20,10 +20,10 @@
     <div data-role="footer" class="nav-glyphish" data-position="fixed" data-id="myfooter">
         <div data-role="navbar" class="nav-glyphish">
             <ul>
-                <li><a href="/msg" data-icon="custom" id="msg">消息中心</a></li>
-                <li><a href="/fav" data-icon="custom" id="fav">我的收藏</a></li>
-                <li><a href="/list" data-icon="custom" id="list">逛一逛</a></li>
-                <li><a href="#" data-icon="custom" id="setting" class="ui-btn-active ui-state-persist">设置</a></li>
+                <li><a href="#msg" data-icon="custom" class="msg">消息中心</a></li>
+                <li><a href="#fav" data-icon="custom" class="fav">我的收藏</a></li>
+                <li><a href="#list" data-icon="custom" class="list">逛一逛</a></li>
+                <li><a href="#" data-icon="custom" class="setting ui-btn-active ui-state-persist">设置</a></li>
             </ul>
         </div>
     </div>
