--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,7 @@
 <body>
 <% include first %>
 <% include msg %>
+<% include faverate %>
 <% include list %>
 <% include setting %>
 <% include mypush %>
