--- a/views/setting.ejs
+++ b/views/setting.ejs
@@ -21,7 +21,7 @@
         <div data-role="navbar" class="nav-glyphish">
             <ul>
                 <li><a href="#msg" data-icon="custom" class="msg">消息中心</a></li>
-                <li><a href="#fav" data-icon="custom" class="fav">我的收藏</a></li>
+                <li><a href="#shop" data-icon="custom" class="fav">我的收藏</a></li>
                 <li><a href="#list" data-icon="custom" class="list">逛一逛</a></li>
                 <li><a href="#" data-icon="custom" class="setting ui-btn-active ui-state-persist">设置</a></li>
             </ul>
