--- a/views/faverate.ejs
+++ b/views/faverate.ejs
@@ -1,5 +1,4 @@
 <div data-role="page" id="shop">
-    <link rel="stylesheet" type="text/css" href="/stylesheets/fav.css" />
     <div data-role="header">
         <div data-role="controlgroup" data-type="horizontal">
             　<a href="#shop" data-role="button">店铺</a>
@@ -7,44 +6,44 @@
         </div>
     </div>
 
-    <div data-role="content" style="height:475px;background-color:#E7E7E7;">
-        <ul class="shop-list-ul">
-            
-            <% for(var i=0;i<items.length;i++){ %>
-            <li class="shop-list-li clearfix">
-                <div class="shop-logo"><img src="<%= items[i].itemLogo %>" width=64 height=64 /></div>
-                <div class="shop-info">
-                    <p>
-                        <a class="shop-name-link" href="<%= items[i].itemLink %>"><%= items[i].itemDesc %></a>
-                    </p>
-                    <p>
-                        <span>好评率：</span>
-                        <span><%= items[i].favRate %></span>
-                    </p>
-                    <p>
-                        <span>宝贝数：</span>
-                        <span><%= items[i].storeLimit %></span>
-                    </p>
-                    <p>
-                        <span>最近更新：</span>
-                        <span><%= items[i].latestTime %></span>
-                    </p>
-                </div>
-                <div style="clear:both"></div>
-            </li>
-            <% } %>
+<div data-role="content" style="height:475px;background-color:#E7E7E7;">
+    <ul class="shop-list-ul">
+
+        <% for(var i=0;i<items.length;i++){ %>
+        <li class="shop-list-li clearfix">
+            <div class="shop-logo"><img src="<%= items[i].itemLogo %>" width=64 height=64 /></div>
+            <div class="shop-info">
+                <p>
+                    <a class="shop-name-link" href="<%= items[i].itemLink %>"><%= items[i].itemDesc %></a>
+                </p>
+                <p>
+                    <span>好评率：</span>
+                    <span><%= items[i].favRate %></span>
+                </p>
+                <p>
+                    <span>宝贝数：</span>
+                    <span><%= items[i].storeLimit %></span>
+                </p>
+                <p>
+                    <span>最近更新：</span>
+                    <span><%= items[i].latestTime %></span>
+                </p>
+            </div>
+            <div style="clear:both"></div>
+        </li>
+        <% } %>
+    </ul>
+</div>
+<div data-role="footer" class="nav-glyphish" data-position="fixed" data-id="myfooter">
+    <div data-role="navbar" class="nav-glyphish">
+        <ul>
+            <li><a href="#msg" data-icon="custom" class="msg">消息中心</a></li>
+            <li><a href="#" data-icon="custom" class="fav" class="ui-btn-active ui-state-persist">我的收藏</a></li>
+            <li><a href="#list" data-icon="custom" class="list">逛一逛</a></li>
+            <li><a href="#setting" data-icon="custom" class="setting">设置</a></li>
         </ul>
     </div>
-    <div data-role="footer" class="nav-glyphish" data-position="fixed" data-id="myfooter">
-        <div data-role="navbar" class="nav-glyphish">
-            <ul>
-                <li><a href="/msg" data-icon="custom" class="msg">消息中心</a></li>
-                <li><a href="#" data-icon="custom" class="fav" class="ui-btn-active ui-state-persist">我的收藏</a></li>
-                <li><a href="/list" data-icon="custom" class="list">逛一逛</a></li>
-                <li><a href="/setting" data-icon="custom" class="setting">设置</a></li>
-            </ul>
-        </div>
-    </div>
+</div>
 </div>
 
 <div data-role="page" id="goods">
@@ -62,10 +61,10 @@
         <div data-role="footer" class="nav-glyphish" data-position="fixed" data-id="myfooter">
             <div data-role="navbar" class="nav-glyphish">
                 <ul>
-                    <li><a href="msg.ejs" data-icon="custom" id="msg">消息中心</a></li>
+                    <li><a href="#msg" data-icon="custom" id="msg">消息中心</a></li>
                     <li><a href="#" data-icon="custom" id="fav" class="ui-btn-active ui-state-persist">我的收藏</a></li>
-                    <li><a href="list.ejs" data-icon="custom" id="list">逛一逛</a></li>
-                    <li><a href="setting.ejs" data-icon="custom" id="setting">设置</a></li>
+                    <li><a href="#list" data-icon="custom" id="list">逛一逛</a></li>
+                    <li><a href="#setting" data-icon="custom" id="setting">设置</a></li>
                 </ul>
             </div>
         </div>
