--- a/views/list.ejs
+++ b/views/list.ejs
@@ -13,13 +13,13 @@
         <div data-role="navbar" class="nav-glyphish">
             <ul>
                 <li><a href="#msg" data-icon="custom" class="msg">消息中心</a></li>
-                <li><a href="#fav" data-icon="custom" class="fav">我的收藏</a></li>
+                <li><a href="#shop" data-icon="custom" class="fav">我的收藏</a></li>
                 <li><a href="#" data-icon="custom" class="list ui-btn-active ui-state-persist">逛一逛</a></li>
                 <li><a href="#setting" data-icon="custom" class="setting">设置</a></li>
             </ul>
         </div>
     </div>
-    <textarea id="listTemplate" style="display:none">
+    <textarea class="listTemplate" style="display:none">
         {{#items}}
         <li class="shop-list-li clearfix">
             <div class="shop-logo"><img src="{{pic_url}}" width=64 height=64 /></div>
