--- a/views/faverate.ejs
+++ b/views/faverate.ejs
@@ -38,7 +38,7 @@
     <div data-role="navbar" class="nav-glyphish">
         <ul>
             <li><a href="#msg" data-icon="custom" class="msg">消息中心</a></li>
-            <li><a href="#" data-icon="custom" class="fav" class="ui-btn-active ui-state-persist">我的收藏</a></li>
+            <li><a href="#" data-icon="custom" class="fav ui-btn-active ui-state-persist">我的收藏</a></li>
             <li><a href="#list" data-icon="custom" class="list">逛一逛</a></li>
             <li><a href="#setting" data-icon="custom" class="setting">设置</a></li>
         </ul>
@@ -56,15 +56,15 @@
         </div>
         
         <div data-role="content">
-            
+            敬请期待
         </div>
         <div data-role="footer" class="nav-glyphish" data-position="fixed" data-id="myfooter">
             <div data-role="navbar" class="nav-glyphish">
                 <ul>
-                    <li><a href="#msg" data-icon="custom" id="msg">消息中心</a></li>
-                    <li><a href="#" data-icon="custom" id="fav" class="ui-btn-active ui-state-persist">我的收藏</a></li>
-                    <li><a href="#list" data-icon="custom" id="list">逛一逛</a></li>
-                    <li><a href="#setting" data-icon="custom" id="setting">设置</a></li>
+                    <li><a href="#msg" data-icon="custom" class="msg">消息中心</a></li>
+                    <li><a href="#" data-icon="custom" class="fav ui-btn-active ui-state-persist">我的收藏</a></li>
+                    <li><a href="#list" data-icon="custom" class="list">逛一逛</a></li>
+                    <li><a href="#setting" data-icon="custom" class="setting">设置</a></li>
                 </ul>
             </div>
         </div>
