--- a/views/list.ejs
+++ b/views/list.ejs
@@ -4,7 +4,7 @@
     </div>
 
     <div data-role="content">
-        <ul class="shop-list-ul" id="shop-list-ul">
+        <ul class="shop-list-ul">
 
         </ul>
         <div id="loading" style="text-align: center"><img src="images/ajax-loader.gif" alt=""></div>
