--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,134 +1,7 @@
-.clearfix:after{content:".";display:block;height:0;clear:both;visibility:hidden}
-
-.nav-glyphish .ui-btn .ui-btn-inner { padding-top: 40px !important;}
-.nav-glyphish .ui-btn .ui-icon { width: 30px!important; height: 30px!important; margin-left: -15px !important; box-shadow: none!important; -moz-box-shadow: none!important; -webkit-box-shadow: none!important; -webkit-border-radius: 0 !important; border-radius: 0 !important; }
-.msg .ui-icon { background:  url(/res/icons/icons-white/09-chat-2@2x.png) 50% 50% no-repeat; background-size: 24px 22px; }
-.fav .ui-icon { background:  url(/res/icons/icons-white/253-person@2x.png) 50% 50% no-repeat; background-size: 26px 24px;  }
-.list .ui-icon { background:  url(/res/icons/icons-white/259-list@2x.png) 50% 50% no-repeat;  background-size: 20px 24px; }
-.setting .ui-icon { background:  url(/res/icons/icons-white/19-gear@2x.png) 50% 50% no-repeat;  background-size: 26px 26px; }
-
-#msg .info ul, #msg .msg-main {
-    list-style: none;
-    padding: 0;
-    margin: -15px;
+body {
+  padding: 50px;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
-
-#msg .top {
-    background: url(/images/bg.jpg) no-repeat 0 -290px transparent;
-    margin: -15px;
-    min-height: 110px;
+a {
+  color: #00b7ff;
 }
-
-#msg .info {
-    margin: -15px;
-    background-color: #f6f6f6;
-    position: relative;
-    font-size: 12px;
-}
-
-#msg .info .user {
-    position: absolute;
-    left: 5px;
-    top: -30px;
-    width: 75px;
-    height: 75px;
-}
-
-#msg .info .unread, #msg .info .fav {
-    display: inline-block;
-    text-align: center;
-    color: #666;
-    font-weight: bold;
-    padding: 15px 0;
-}
-
-#msg .info .unread span, #msg .info .fav span {
-    display: block;
-}
-
-#msg .info .unread span {
-    margin-right: 14px;
-}
-
-#msg .info .unread {
-    width: 44%;
-    text-align: right;
-    padding-right: 5px;
-}
-
-#msg .info .fav {
-    width: 25%;
-    border-left: solid 1px #d3d3d3;
-}
-
-#msg .msg-main {
-    margin-top: 15px;
-    font-size: 12px;
-}
-
-#msg .msg-main li {
-    border-top: 1px solid #dadada;
-    border-bottom: 1px solid #eee;
-    background-color: #e7e7e7;
-    padding: 10px;
-}
-
-#msg img {
-    border: solid 1px #eee;
-}
-
-#msg .msg-main img {
-    width: 50px;
-    height: 50px;
-}
-
-#msg .msg-main .detail-wrap {
-    margin-left: 70px;
-    margin-top: -60px;
-}
-
-#msg .msg-main .detail {
-    background-color: #fff;
-    min-height: 45px;
-    padding: 5px;
-}
-
-#msg .msg-main .detail img {
-    float: left;
-}
-
-#msg .msg-main .shopdetail img {
-    margin-right: 3px;
-}
-
-#msg .comment {
-    margin-left: 60px;
-    font-size: 12px;
-}
-
-#list .shop-list-ul{margin:0;background-color:#e7e7e7;padding:10px;}
-#list .shop-list-li{list-style:none;margin:10px;}
-#list .shop-logo{width:64px;height:64px;overflow:hidden;border-radius:4px;margin-right:10px;margin-top: 5px;float:left;}
-#list .shop-info{line-height:12px;float:left;}
-#list .shop-name-link{font-size:12px;color:#444;}
-#list .shop-info span{font-size:10px;color:#666;}
-#list .shop-info p{margin:5px 0;}
-#list .ui-content{padding:0;}
-
-#shop .shop-list-ul{margin:0;background-color:#e7e7e7;padding:10px;}
-#shop .shop-list-li{list-style:none;margin:10px;}
-#shop .shop-logo{width:64px;height:64px;overflow:hidden;border-radius:4px;margin-right:10px;margin-top: 5px;float:left;}
-#shop .shop-info{line-height:12px;float:left;}
-#shop .shop-name-link{font-size:12px;color:#444;}
-#shop .shop-info span{font-size:10px;color:#666;}
-#shop .shop-info p{margin:5px 0;}
-#shop .ui-content{padding:0;}
-
-#goods .shop-list-ul{margin:0;background-color:#e7e7e7;padding:10px;}
-#goods .shop-list-li{list-style:none;margin:10px;}
-#goods .shop-logo{width:64px;height:64px;overflow:hidden;border-radius:4px;margin-right:10px;margin-top: 5px;float:left;}
-#goods .shop-info{line-height:12px;float:left;}
-#goods .shop-name-link{font-size:12px;color:#444;}
-#goods .shop-info span{font-size:10px;color:#666;}
-#goods .shop-info p{margin:5px 0;}
-#goods .ui-content{padding:0;}
