--- a/views/list.ejs
+++ b/views/list.ejs
@@ -22,22 +22,19 @@
     <textarea class="listTemplate" style="display:none">
         {{#items}}
         <li class="shop-list-li clearfix">
-            <div class="shop-logo"><img src="{{pic_url}}" width=64 height=64 /></div>
+            <div class="shop-logo"><a href="#itemdetail?itemid={{num_iid}}"><img src="{{pic_url}}" width=64 height=64 /></a></div>
             <div class="shop-info">
                 <p>
-                    <a class="shop-name-link" href="{{click_url}}">{{title}}</a>
+                    <a class="shop-name-link" href="#itemdetail">{{title}}</a>
                 </p>
                 <p>
-                    <span>好评率：</span>
-                    <span><</span>
+                    <span>促销价：</span>
+                    <span style="font-family: arial;">￥{{price}}</span>
                 </p>
                 <p>
-                    <span>宝贝数：</span>
+                    <span>月销：</span>
                     <span>{{volume}}</span>
-                </p>
-                <p>
-                    <span>最近更新：</span>
-                    <span></span>
+                    <span>件</span>
                 </p>
             </div>
             <div style="clear:both"></div>
