--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,5 +19,6 @@
 <% include setting %>
 <% include mypush %>
 <% include itemdetail %>
+<input type="hidden" id="itemId" value="">
 </body>
 </html>
