--- a/views/itemdetail.ejs
+++ b/views/itemdetail.ejs
@@ -7,5 +7,6 @@
 
     <div data-role="content">
         <div id="loading" style="text-align: center"><img src="images/ajax-loader.gif" alt=""></div>
+        <div class="main"></div>
     </div>
 </div>
