--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -106,7 +106,7 @@
     font-size: 12px;
 }
 
-#list .shop-list-ul{margin:0;background-color:#e7e7e7;padding:10px;}
+#list .shop-list-ul{width:320px;margin:0 auto;background-color:#e7e7e7;padding:10px;}
 #list .shop-list-li{list-style:none;margin:10px;}
 #list .shop-logo{width:64px;height:64px;overflow:hidden;border-radius:4px;margin-right:10px;margin-top: 5px;float:left;}
 #list .shop-info{line-height:12px;margin-left: 75px}
@@ -115,8 +115,8 @@
 #list .shop-info p{margin:5px 0;}
 #list .ui-content{padding:0;}
 
-#shop .shop-list-ul{margin:0;background-color:#e7e7e7;padding:10px;}
-#shop .shop-list-li{list-style:none;margin:10px;}
+#shop .shop-list-ul{width:320px;margin:0 auto;background-color:#e7e7e7;padding:10px;}
+#shop .shop-list-li{list-style:none;margin:10px 20px;}
 #shop .shop-logo{width:64px;height:64px;overflow:hidden;border-radius:4px;margin-right:10px;margin-top: 5px;float:left;}
 #shop .shop-info{line-height:12px;float:left;}
 #shop .shop-name-link{font-size:12px;color:#444;}
@@ -125,7 +125,7 @@
 #shop .ui-content{padding:0;}
 
 #goods .shop-list-ul{margin:0;background-color:#e7e7e7;padding:10px;}
-#goods .shop-list-li{list-style:none;margin:10px;}
+#goods .shop-list-li{list-style:none;margin:10px 20px;}
 #goods .shop-logo{width:64px;height:64px;overflow:hidden;border-radius:4px;margin-right:10px;margin-top: 5px;float:left;}
 #goods .shop-info{line-height:12px;float:left;}
 #goods .shop-name-link{font-size:12px;color:#444;}
