--- a/views/list.ejs
+++ b/views/list.ejs
@@ -13,7 +13,7 @@
         <div data-role="navbar" class="nav-glyphish">
             <ul>
                 <li><a href="#msg" data-icon="custom" class="msg">消息中心</a></li>
-                <li><a href="#shop" data-icon="custom" class="fav">我的收藏</a></li>
+                <li><a href="#goods" data-icon="custom" class="fav">我的收藏</a></li>
                 <li><a href="#" data-icon="custom" class="list ui-btn-active ui-state-persist">逛一逛</a></li>
                 <li><a href="#setting" data-icon="custom" class="setting">设置</a></li>
             </ul>
