--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -1,5 +1,9 @@
 .clearfix:after{content:".";display:block;height:0;clear:both;visibility:hidden}
 
+body {
+    font-size: 14px;
+}
+
 .nav-glyphish .ui-btn .ui-btn-inner { padding-top: 40px !important;}
 .nav-glyphish .ui-btn .ui-icon { width: 30px!important; height: 30px!important; margin-left: -15px !important; box-shadow: none!important; -moz-box-shadow: none!important; -webkit-box-shadow: none!important; -webkit-border-radius: 0 !important; border-radius: 0 !important; }
 .msg .ui-icon { background:  url(/res/icons/icons-white/09-chat-2@2x.png) 50% 50% no-repeat; background-size: 24px 22px; }
@@ -132,3 +136,6 @@
 #goods .shop-info span{font-size:10px;color:#666;}
 #goods .shop-info p{margin:5px 0;}
 #goods .ui-content{padding:0;}
+
+#itemdetail .ui-btn-text {font-size: 14px}
+#itemdetail .ui-btn-inner {font-size: 14px}
