--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,9 +5,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="lib/jquery.mobile-1.2.0.min.css" />
+    <link rel="stylesheet" href="lib/jqm-icon-pack-2.0-original.css" />
     <link rel="stylesheet" href="stylesheets/all.css">
     <script src="lib/jquery-1.8.3.min.js"></script>
     <script src="lib/jquery.mobile-1.2.0.min.js"></script>
+    <script language="javascript" type="text/javascript" src="lib/jquery.jqplot.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="lib/jquery.jqplot.css" />
     <script type="text/javascript" src="lib/mustache.js"></script>
     <script type="text/javascript" src="javascripts/all.js"></script>
 </head>
