--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,5 +20,6 @@
 <% include mypush %>
 <% include itemdetail %>
 <input type="hidden" id="itemId" value="">
+<input type="hidden" id="user" value="<%= username %>">
 </body>
 </html>
