--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,15 +25,30 @@
 </div>
 </header>
         <section class="innercontent">
-            <form  method="post"   class="c-form login-form" action="https://oauth.taobao.com/authorize?spm=0.0.0.191.UUePJT&response_type=code&client_id=21354870&redirect_uri=http://10.13.37.48:3000/msg&state=1212&scope=item&view=web" id="J_Login">
-                <input name='_tb_token_' type='hidden' value='Dx8z44jonl' />
-                <fieldset>
+            <form  method="post"   class="c-form login-form" action="/auth" id="J_Login">
+<fieldset>
+                    <div class="field username">
+                        <div class="c-form-search">
+<input type="text" name="TPL_username" id="J_UserNameTxt"   placeholder="会员名" value="" /><button type="button"><span></span></button></div>
+                    </div>
+                    <div class="field pwd">
+                        <input  type="password" name="TPL_password" id="J_PassWordTxt"  placeholder="密码"  class="c-form-txt-normal" />
+                    </div>
                     <div class="field submit-btn">
-                        <input type="submit" class="c-btn-oran-big" value="淘 宝 登 录"/>
+                        <input type="submit" class="c-btn-oran-big" value="登 录"/>
+                    </div>
+                    <div class="field login-option">
+                        <% if(error) {%>
+                      <span style="color:red;font-size:12px;"><%= error %></span>
+                      <% } %>
+                    </div>
+                    <div style="color: #666; margin-top:10px;font-size: 14px">
+                        <span>忘记密码：请电脑登录www.taobao.com找回</span>
                     </div>
                 </fieldset>
             </form>
        </section>
+
 <noscript>
 <img src='http://mbuf.alipay.com/dc.htm?token=T735d52d68ccd88609a4393c91db260cc1357627560957' width="0" height="0" />
 </noscript>
