--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -18,7 +18,7 @@ body {
 }
 
 #msg .top {
-    background: url(/images/bg.jpg) no-repeat 0 -290px transparent;
+    background: url(/images/bg-1.png) no-repeat 0 0 transparent;
     margin: -15px;
     min-height: 110px;
 }
