--- a/views/faverate.ejs
+++ b/views/faverate.ejs
@@ -2,22 +2,22 @@
 <textarea class="J_GoodsTemp" style="display:none;">
     {{#goods}}
         <li class="shop-list-li clearfix">
-            <div class="shop-logo"><img src="{{itemLogo}}" width=64 height=64 /></div>
+            <div class="shop-logo"><img src="{{pic_url}}" width=64 height=64 /></div>
             <div class="shop-info">
                 <p>
-                    <a class="shop-name-link" href="{{itemLink}}">{{itemDesc}}</a>
+                    <a class="shop-name-link" href="#itemdetail" data-itemid="{{num_iid}}" data-transition="slide">{{title}}</a>
                 </p>
                 <p>
                     <span>好评率：</span>
-                    <span>{{favRate}}</span>
+                    <span>{{commission_num/100}}%</span>
                 </p>
                 <p>
                     <span>宝贝数：</span>
-                    <span>{{storeLimit}}</span>
+                    <span>{{volume}}</span>
                 </p>
                 <p>
                     <span>最近更新：</span>
-                    <span>{{latestTime}}</span>
+                    <span></span>
                 </p>
             </div>
             <div style="clear:both"></div>
